--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2760c6c9-31cd-469b-9244-73c52498af3a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
